--- a/public/themes/simpleboot3/portal/product.html
+++ b/public/themes/simpleboot3/portal/product.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div id="product" class="product">
-<!-- 头部图片 -->
+    <!-- 头部图片 -->
     <div class="banner">
         <div class="product_banner_text_one">劳务派遣</div>
         <div class="product_banner_text_two">劳务派遣机构与派遣员工订立劳动合同，把劳动者派向用工单位，用工单位向派遣机构支付服务费的模式</div>
@@ -15,44 +15,155 @@
         <div class="title">客户的难题</div>
         <div class="tag">持续不断为客户提供具有价值的产品和服务</div>
         <div class="list">
-			<div class="item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
-				<div class="item_content">
-					<div class="item_title">编制不足</div>
-					<div class="item_des">企业编制不足，人力配置安排无法负荷业务变化需求</div>
-				</div>
+            <div class="item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
+                <div class="item_content">
+                    <div class="item_title">编制不足</div>
+                    <div class="item_des">企业编制不足，人力配置安排无法负荷业务变化需求</div>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
+                <div class="item_content">
+                    <div class="item_title">模式单一</div>
+                    <div class="item_des">企业用工模式单一，难以提供多元人力资源配置组合方案</div>
+                </div>
+
+            </div>
+            <div class="item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
+                <div class="item_content">
+                    <div class="item_title">成本高</div>
+                    <div class="item_des">同时联络多个窗口、多个渠道，沟通成本高、效率低</div>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
+                <div class="item_content">
+                    <div class="item_title">临时用人</div>
+                    <div class="item_des">临时性、辅助性、重复性、可替代性工作占据大量工作时间和精力</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 我们的产品 -->
+    <div class="ourproduct">
+        <div class="ourproduct_left">
+            <div class="ourproduct_left_title">我们的产品</div>
+            <div class="ourproduct_left_tag">劳务派遣服务--企业用工灵活，风险有效转移</div>
+            <div class="ourproduct_left_text">
+                我们深刻理解企业业务发展过程中所需的灵活性，以及组织管理中的多元资源配置需求，通过人才派遣模式，客户有机会不受组织编制限制，有效平衡灵活用工与合规管理，实现成本控制和人才架构优化等多重目标。
+            </div>
+            <div class="ourproduct_left_text">劳务派遣机构与派遣员工订立劳动合同，把劳动者派向用工单位，用工单位向派遣机构支付服务费的模式。临时性、辅助性、可替代性岗位的人才派遣服务。
+            </div>
+            <button><img src="__TMPL__/public/assets/style/imgs/product/ourproduct-yuyue.png" alt="">预约咨询</button>
+        </div>
+        <img src="__TMPL__/public/assets/style/imgs/product/ourproduct.png" alt="">
+    </div>
+    <!-- 我们的优势 -->
+    <div class="ouradvantage">
+        <div class="ouradvantage_content">
+            <div class="title">我们的优势</div>
+            <div class="tag">持续不断为客户提供具有价值的产品和服务</div>
+            <div class="list">
+                <div class="item">
+                    <div class="item_first">
+                        <div class="item_first_content">
+                            <img src="__TMPL__/public/assets/style/imgs/product/ouradvantage1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="item_title">有经验</div>
+                    <div class="item_des">服务团队平均工龄五年以上</div>
+                </div>
+                <div class="item">
+                    <div class="item_first">
+                        <div class="item_first_content">
+                            <img src="__TMPL__/public/assets/style/imgs/product/ouradvantage2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="item_title">渠道广</div>
+                    <div class="item_des">拥有百人招聘团队线上线下渠道完善</div>
+                </div>
+                <div class="item">
+                    <div class="item_first">
+                        <div class="item_first_content">
+                            <img src="__TMPL__/public/assets/style/imgs/product/ouradvantage3.png" alt="">
+                        </div>
+                    </div>
+                    <div class="item_title">资质全</div>
+                    <div class="item_des">人力资源服务资质保险代理资质</div>
+                </div>
+                <div class="item">
+                    <div class="item_first">
+                        <div class="item_first_content">
+                            <img src="__TMPL__/public/assets/style/imgs/product/ouradvantage4.png" alt="">
+                        </div>
+                    </div>
+                    <div class="item_title">专业高</div>
+                    <div class="item_des">拥有人力资源高精尖人才50人</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 我们的价值 -->
+    <div class="ourvalue">
+        <div class="title">我们的价值</div>
+        <div class="tag">持续不断为客户提供具有价值的产品和服务</div>
+        <div class="list">
+            <div class="item">
+                <div class="item_first">
+                    <div class="item_first_content">
+						<div class="item_first_content_text">
+							高效服务
+						</div>
+                    </div>
+                </div>
+                <div class="item_des">为客户及员工提供高效和可靠的社保、公积金服务，以及各类便捷查询手段，利用先进的数字化手段和平台，实现服务信息交互和服务信息反馈的迅速传递。</div>
+            </div>
+			<div class="item">
+			    <div class="item_first">
+			        <div class="item_first_content">
+						<div class="item_first_content_text">
+							用工配置
+						</div>
+			        </div>
+			    </div>
+			    <div class="item_des">为客户提供了多元的人力资源用工配置选择，提升组织的灵活性和管理的有效性，满足部分企业用工编制困难。</div>
 			</div>
-			<div class="item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
-				<div class="item_content">
-					<div class="item_title">模式单一</div>
-					<div class="item_des">企业用工模式单一，难以提供多元人力资源配置组合方案</div>
-				</div>
-			    
+			<div class="item">
+			    <div class="item_first">
+			        <div class="item_first_content">
+						<div class="item_first_content_text">
+							风险管控
+						</div>
+			        </div>
+			    </div>
+			    <div class="item_des">具有稳健、可信赖的品牌与口碑，平衡兼顾企业与员工的利益，更为有效和顺利避免相关争议，提前为客户做好风险管控。</div>
 			</div>
-			<div class="item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
-			    <div class="item_content">
-					<div class="item_title">成本高</div>
-					<div class="item_des">同时联络多个窗口、多个渠道，沟通成本高、效率低</div>
-				</div>
-			</div>
-			<div class="item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
-				<div class="item_content">
-					<div class="item_title">临时用人</div>
-					<div class="item_des">临时性、辅助性、重复性、可替代性工作占据大量工作时间和精力</div>
-				</div>
+			<div class="item">
+			    <div class="item_first">
+			        <div class="item_first_content">
+						<div class="item_first_content_text">
+							提升专业
+						</div>
+			        </div>
+			    </div>
+			    <div class="item_des">通过丰富的实践案例，为客户提供专业的人事管理管理建议及高效的事务性工作外包，提升客户企业人力资源管理投入产出比。</div>
 			</div>
         </div>
     </div>
-	<!-- 我们的产品 -->
-	<div class="ourproduct">
-		<div class="ourproduct_left">
-			<div class="ourproduct_left_title">我们的产品</div>
-			<div class="ourproduct_left_tag">劳务派遣服务--企业用工灵活，风险有效转移</div>
-			<div class="ourproduct_left_text">我们深刻理解企业业务发展过程中所需的灵活性，以及组织管理中的多元资源配置需求，通过人才派遣模式，客户有机会不受组织编制限制，有效平衡灵活用工与合规管理，实现成本控制和人才架构优化等多重目标。</div>
-			<div class="ourproduct_left_text">劳务派遣机构与派遣员工订立劳动合同，把劳动者派向用工单位，用工单位向派遣机构支付服务费的模式。临时性、辅助性、可替代性岗位的人才派遣服务。</div>
-			<button><img src="__TMPL__/public/assets/style/imgs/product/ourproduct-yuyue.png" alt="">预约咨询</button>
-		</div>
-		<img src="__TMPL__/public/assets/style/imgs/product/ourproduct.png" alt="">
-	</div>
+    <!-- 客户信赖 -->
+    <div class="solution_customer">
+        <div class="title">1600+家企业的信赖</div>
+        <div class="tag">深耕人力资源服务业，为企业提供更优质的服务</div>
+        <div class="list">
+            <img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
+            <img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
+            <img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
+            <img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
+            <img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
+            <img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
+        </div>
+        <div class="next">
+            查看所有客户案例
+        </div>
+    </div>
 </div>
 <include file="public@footer"/>
 </body>
