--- a/public/themes/simpleboot3/portal/product.html
+++ b/public/themes/simpleboot3/portal/product.html
@@ -164,6 +164,12 @@
             查看所有客户案例
         </div>
     </div>
+	<!-- 以人为本 -->
+	<div class="getresolve">
+		<div class="title">以人为本，创造价值，多方共赢，长期发展</div>
+		<div class="tag">全国170+家直营分/子公司，量身定制，满足多个行业广泛业务需求</div>
+		<button>获取定制解决方案</button>
+	</div>
 </div>
 <include file="public@footer"/>
 </body>
