--- a/public/themes/simpleboot3/public/customers.html
+++ b/public/themes/simpleboot3/public/customers.html
@@ -10,3 +10,27 @@
 <div><img src="__TMPL__/public/assets/style/imgs/index/customer/10.png" /></div>
 <div><img src="__TMPL__/public/assets/style/imgs/index/customer/11.png" /></div>
 <div><img src="__TMPL__/public/assets/style/imgs/index/customer/12.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/1.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/2.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/3.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/4.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/5.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/6.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/7.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/8.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/9.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/10.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/11.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/12.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/1.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/2.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/3.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/4.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/5.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/6.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/7.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/8.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/9.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/10.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/11.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/12.png" /></div>
