--- a/public/themes/simpleboot3/portal/news.html
+++ b/public/themes/simpleboot3/portal/news.html
@@ -18,11 +18,13 @@
     </div>
     <div class="list">
         <div class="item">
-            <img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
-            <div class="title">人力资源社会保障部办公厅 关于开展人力资源服务机...</div>
-            <div class="content">
-                为贯彻党中央、国务院关于稳就业、保居民就业决策部署，充分发挥人力资源服务机构匹配供需、专业高效优势，人力资源社会保障部决定开展人力资源服务机构稳就业促就业行动。现就有关工作通知...
-            </div>
+			<a href="{:cmf_url('portal/News/detail')}">
+				<img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
+				<div class="title">人力资源社会保障部办公厅 关于开展人力资源服务机...</div>
+				<div class="content">
+					为贯彻党中央、国务院关于稳就业、保居民就业决策部署，充分发挥人力资源服务机构匹配供需、专业高效优势，人力资源社会保障部决定开展人力资源服务机构稳就业促就业行动。现就有关工作通知...
+				</div>
+			</a>
         </div>
 		<div class="item">
 		    <img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
