--- a/public/themes/simpleboot3/portal/customer.html
+++ b/public/themes/simpleboot3/portal/customer.html
@@ -14,9 +14,8 @@
 <body>
 	<div class="customer">
 		<div class="index-banner index-banner-top">
-			<div>
+			<div class="index-banner-box">
 				<div class="title">合作客户</div>
-			</div>
 		</div>
 		<div class="customer-list">
 			<div class="inner">
