--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="index">
 			<div class="index-banner index-banner-top">
-				<div>
+				<div class="index-banner-box">
 					<div class="title">15年深耕人力资源服务业</div>
 					<div class="text">服务上市公司29家和超千人企业83家</div>
 				</div>
