--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/index.css?v=0.01">
 	<link href="__TMPL__/public/assets/style/font/iconfont.css" rel="stylesheet">
     <link rel="shortcut icon" href="__TMPL__/public/assets/style/imgs/favicon.ico">
-    <link href="__TMPL__/public/assets/style/css/contact.css" rel="stylesheet">
+    <!-- <link href="__TMPL__/public/assets/style/css/contact.css" rel="stylesheet"> -->
     <link href="__TMPL__/public/assets/style/css/solution.css" rel="stylesheet">
 	<link href="__TMPL__/public/assets/style/css/product.css" rel="stylesheet">
     <link href="__TMPL__/public/assets/style/css/map.css" rel="stylesheet">
@@ -37,6 +37,7 @@
 	<script src="__TMPL__/public/assets/style/js/jquery.min.js"></script>
 	<script src="__TMPL__/public/assets/style/js/slick.min.js"></script>
 	<script src="__TMPL__/public/assets/style/font/iconfont.js"></script>
+	<script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.4&key=390f8d3e5942f5160a994c1916cae4b1"></script>
 	
 	
 </head>
