--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -97,60 +97,15 @@
 			<li class="menu-splitL-li border-1px-rgba animate">
 				<a href="{:cmf_url('portal/Index/index')}" class="menu-splitL-item" title="首页">首页</a>
 			</li>
-			<li class="menu-splitL-li menu-splitL-product-li border-1px-rgba animate">
-				<a href="javascript:void(0)" class="menu-splitL-item" title="解决方案&产品服务">解决方案&产品服务</a>
-				<img class="menu-icon" src="__TMPL__/public/assets/style/img/menu-icon.png" alt="">
+			<li class="menu-splitL-li border-1px-rgba animate">
+				<a href="{:cmf_url('portal/Product/index')}" class="menu-splitL-item" title="产品服务">产品服务</a>
 			</li>
-			<ul class="menu-product-ul" style="display: none;">
-				<li class="menu-product-ul-li menu-product-estate-li border-1px-rgba animate">
-					<a href="javascript:void(0)" class="menu-splitL-item">解决方案</a>
-					<img class="menu-icon" src="__TMPL__/public/assets/style/img/menu-icon.png" alt="">                                    
-				</li>
-				<ul class="menu-estate-ul menu-product-ul-style border-1px-rgba" style="display: none;">
-					<li class="menu-estate-ul-li animate">
-						<a href="{:cmf_url('portal/Solution/index',array('id'=>1))}" class="menu-splitL-item menu-product-ul-li-style">国企和上市物业公司保洁用工解决方案</a>
-					</li>
-					<li class="menu-estate-ul-li animate">
-						<a href="{:cmf_url('portal/Solution/index',array('id'=>2))}" class="menu-splitL-item menu-product-ul-li-style">保洁用工风险解决方案</a>
-					</li>
-					<li class="menu-estate-ul-li animate">
-						<a href="{:cmf_url('portal/Solution/index',array('id'=>3))}" class="menu-splitL-item menu-product-ul-li-style">保洁人员招聘外包解决方案</a>
-					</li>
-				</ul>	
-				<li class="menu-product-ul-li menu-product-government-li border-1px-rgba animate">
-					<a href="javascript:void(0)" class="menu-splitL-item" title="产品服务">产品服务</a>
-					<img class="menu-icon" src="__TMPL__/public/assets/style/img/menu-icon.png" alt="产品服务">                                    
-				</li>
-				<ul class="menu-government-ul menu-product-ul-style border-1px-rgba" style="display: none;">
-					<li class="menu-government-ul-li menu-product-ul-li-style animate">
-						<a href="{:cmf_url('portal/Service/index',array('id'=>1))}" class="menu-splitL-item" title="政府清洁">政府清洁</a>
-					</li>
-					<li class="menu-government-ul-li menu-product-ul-li-style animate">
-						<a href="{:cmf_url('portal/Service/index',array('id'=>2))}" class="menu-splitL-item" title="酒店清洁">酒店清洁</a>
-					</li>
-					<li class="menu-government-ul-li menu-product-ul-li-style animate">
-						<a href="{:cmf_url('portal/Service/index',array('id'=>3))}" class="menu-splitL-item" title="学校清洁">学校清洁</a>
-					</li>
-					<li class="menu-government-ul-li menu-product-ul-li-style animate">
-						<a href="{:cmf_url('portal/Service/index',array('id'=>4))}" class="menu-splitL-item" title="医院清洁">医院清洁</a>
-					</li>
-					<li class="menu-government-ul-li menu-product-ul-li-style animate">
-						<a href="{:cmf_url('portal/Service/index',array('id'=>5))}" class="menu-splitL-item" title="写字楼清洁">写字楼清洁</a>
-					</li>
-					<li class="menu-government-ul-li menu-product-ul-li-style animate">
-						<a href="{:cmf_url('portal/Service/index',array('id'=>6))}" class="menu-splitL-item" title="工业园区清洁">工业园区清洁</a>
-					</li>
-					<li class="menu-government-ul-li menu-product-ul-li-style animate">
-						<a href="{:cmf_url('portal/Service/index',array('id'=>7))}" class="menu-splitL-item" title="城市环境清洁">城市环境清洁</a>
-					</li>
-					<li class="menu-government-ul-li menu-product-ul-li-style animate">
-						<a href="{:cmf_url('portal/Service/index',array('id'=>8))}" class="menu-splitL-item" title="商场清洁">商场清洁</a>
-					</li>
-				</ul>
-			</ul>
-			<!-- <li class="menu-splitL-li border-1px-rgba animate">
-				<a href="{:cmf_url('portal/News/index')}" class="menu-splitL-item" title="新闻中心">新闻中心</a>
-			</li> -->
+			<li class="menu-splitL-li border-1px-rgba animate">
+				<a href="{:cmf_url('portal/Resolve/index')}" class="menu-splitL-item" title="解决方案">解决方案</a>
+			</li>
+			 <li class="menu-splitL-li border-1px-rgba animate">
+				<a href="{:cmf_url('portal/News/index')}" class="menu-splitL-item" title="新闻咨询">新闻咨询</a>
+			</li>
 			<li class="menu-splitL-li border-1px-rgba animate">
 				<a href="{:cmf_url('portal/About/index')}" class="menu-splitL-item" title="关于中洁">关于中洁</a>
 			</li>
