--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -101,7 +101,7 @@
 				<a href="{:cmf_url('portal/Product/index')}" class="menu-splitL-item" title="产品服务">产品服务</a>
 			</li>
 			<li class="menu-splitL-li border-1px-rgba animate">
-				<a href="{:cmf_url('portal/Resolve/index')}" class="menu-splitL-item" title="解决方案">解决方案</a>
+				<a href="{:cmf_url('portal/Solution/index')}" class="menu-splitL-item" title="解决方案">解决方案</a>
 			</li>
 			 <li class="menu-splitL-li border-1px-rgba animate">
 				<a href="{:cmf_url('portal/News/index')}" class="menu-splitL-item" title="新闻咨询">新闻咨询</a>
