--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -524,4 +524,16 @@
 
 		</div>
 	</body>
+	<script type="text/javascript">
+	$(function(){
+		$(".index-solution .index-solution-box-left li").mouseover(function(){
+			$(".index-solution .index-solution-box-left li").removeClass("active");
+			$(this).addClass("active");
+		})
+		$(".index-solution .index-solution-box-left li").mouseout(function(){
+			$(".index-solution .index-solution-box-left li").removeClass("active");
+			$(".index-solution .index-solution-box-left li").eq(0).addClass("active");
+		})
+	})
+	</script>
 </html>
