--- a/public/themes/simpleboot3/portal/product.html
+++ b/public/themes/simpleboot3/portal/product.html
@@ -14,7 +14,7 @@
     <div class="problem">
         <div class="title">客户的难题</div>
         <div class="tag">持续不断为客户提供具有价值的产品和服务</div>
-        <div class="list">
+        <div class="list inner">
             <div class="item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
                 <div class="item_content">
                     <div class="item_title">编制不足</div>
@@ -54,7 +54,9 @@
             </div>
             <button><img src="__TMPL__/public/assets/style/imgs/product/ourproduct-yuyue.png" alt="">预约咨询</button>
         </div>
-        <img src="__TMPL__/public/assets/style/imgs/product/ourproduct.png" alt="">
+		<div class="ourproduct_right">
+			<img src="__TMPL__/public/assets/style/imgs/product/ourproduct.png" alt="">
+		</div>
     </div>
     <!-- 我们的优势 -->
     <div class="ouradvantage">
