--- a/public/themes/simpleboot3/portal/staffs.html
+++ b/public/themes/simpleboot3/portal/staffs.html
@@ -78,7 +78,9 @@
                         $("#phone").html(result.data.phone)
                         $("#status").html(result.data.status)
                         $("#number").html(result.data.number)
-                        $("#avatar").attr('src',result.data.avatar);
+						let avatar=result.data.avatar.replace('portal/about','upload');
+						console.log(avatar);
+                        $("#avatar").attr('src',avatar);
                     }else {
                         alert("未查询到该员工！");
                     }
